some minor styling changes

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: bold;
 	color: steelblue;
 }
+h4 {
+	text-decoration: underline;
+}
 .slide-caption{
 	padding-top: 10em;
 }
